--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,20 +1,15 @@
 @import "vars"
 @import "base"
 @import "grid"
-.calcRow
-  display:inline-block
-  background: $background
-  height: 40px
-  font-size: $font-size--base
+
 
 .form
   background-color: $background
   display:inline-block
-
+  width: 280px
 
 .operator
   text-align: justify
 
-.buttons
-  color:red
-  margin: 0
+button
+  background: none
