--- a/sass/base.sass
+++ b/sass/base.sass
@@ -1,2 +1,20 @@
 *
   box-sizing: border-box
+
+button
+  background: none
+  border-color: transparent
+  margin: 0
+  cursor: pointer
+  color: white
+  border-style: solid
+  border-color: white
+  border-width: thin
+
+//.calcDisplay
+  background: none
+  margin: 0
+  color: white
+  border-style: solid
+  border-color: white
+  border-width: thick
