--- a/sass/grid.sass
+++ b/sass/grid.sass
@@ -1,5 +1,8 @@
 .grid__row
   font-size: 0
+  border-style: solid
+  border-color: white
+  border-width: thin
 
 [class^=grid__col]
   display: inline-block
