--- a/sass/main.sass
+++ b/sass/main.sass
@@ -4,12 +4,10 @@
 
 
 .form
-  background-color: $background
-  display:inline-block
-  width: 280px
+  background: $background
+  display: inline-block
+  width: 150px
+  margin: 0
 
 .operator
   text-align: justify
-
-button
-  background: none
