--- a/sass/base.sass
+++ b/sass/base.sass
@@ -7,9 +7,12 @@ button
   margin: 0
   cursor: pointer
   color: white
-  border-style: solid
-  border-color: white
   border-width: thin
+
+:
+
+
+
 
 //.calcDisplay
   background: none
