--- a/sass/main.sass
+++ b/sass/main.sass
@@ -8,6 +8,15 @@
   display: inline-block
   width: 150px
   margin: 0
+  padding-top: 0
+  padding-right: 0
+  padding-left: 0
+
 
 .operator
   text-align: justify
+  border: none !important
+  opacity: 0.3
+  color: black
+// I don't remember where to make a selector so I could make the hover tag for
+// the operator buttons but I do know that we need one. 
