--- a/sass/grid.sass
+++ b/sass/grid.sass
@@ -3,6 +3,9 @@
   border-style: solid
   border-color: white
   border-width: thin
+  padding-top: 0
+  margin: 0
+  font-size: 11
 
 [class^=grid__col]
   display: inline-block
